<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:context=".Splash" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/yes_button"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="20dp"
        tools:context=".Splash" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/TextView01"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/no_button"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/budget"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
